--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,9 +4,9 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.h2-1.4.197.jar=C:\\Users\\dugge\\Documents\\NetBeansProjects
+file.reference.h2-1.4.197.jar=C:\\Users\\jorda\\Documents\\NetBeansProjects\\LuckyLanesDoug\\h2-1.4.197.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
-user.properties.file=C:\\Users\\dugge\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\jorda\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
